--- a/index.html
+++ b/index.html
@@ -2,23 +2,18 @@
 
 <head>
     <title>547的小网站</title>
-    <!-- Metadata -->
     <meta name="keywords" content="547班, 隆安中学" />
     <meta name="description" content="隆安中学本部校区高547班官网" />
     <meta charset="utf-8">
-    <!-- OpenGraph Metadata-->
-    <meta property="og:title" content="547的小网站">
-    <meta property="og:description" content="隆安中学高547班官网" />
-    <meta property="og:type" content="website" />
-
     <link rel="icon" href="2024547.ico
     " type="image/x-icon">
     <link rel="stylesheet" async href="./style.css">
     <link rel="stylesheet" async href="./audio2.css">
 </head>
-<body>
+
+<body style="min-width: 1200;">
     <div id="heard" style="background-color:var(--nav-bg-color);height: 102;" class="center">
-        <div style="max-width: 1200;min-width: 600;margin: 0 auto;">
+        <div style="width: 1200;margin: 0 auto;">
             <div id="header" style="background-color:var(--nav-bg-color);height:60;min-width: 600;max-width: 1200;"
                 class="center">
                 <div id="menu" style="width:60px;height:60px;float:left;">
@@ -31,24 +26,46 @@
                 </div>
                 <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
                     <a href="https://github.com/lazx547/lazx547.github.io" target="_blank">
-                        <img id="github_ico" src="images/github.png" style="width:35px;height:35px;" class="github">
+                        <svg height="40" aria-hidden="true" viewBox="0 0 24 24" version="1.1" width="40"
+                            data-view-component="true">
+                            <path fill="var(--icon-fill-color)"
+                                d="M12 1C5.923 1 1 5.923 1 12c0 4.867 3.149 8.979 7.521 10.436.55.096.756-.233.756-.522 0-.262-.013-1.128-.013-2.049-2.764.509-3.479-.674-3.699-1.292-.124-.317-.66-1.293-1.127-1.554-.385-.207-.936-.715-.014-.729.866-.014 1.485.797 1.691 1.128.99 1.663 2.571 1.196 3.204.907.096-.715.385-1.196.701-1.471-2.448-.275-5.005-1.224-5.005-5.432 0-1.196.426-2.186 1.128-2.956-.111-.275-.496-1.402.11-2.915 0 0 .921-.288 3.024 1.128a10.193 10.193 0 0 1 2.75-.371c.936 0 1.871.123 2.75.371 2.104-1.43 3.025-1.128 3.025-1.128.605 1.513.221 2.64.111 2.915.701.77 1.127 1.747 1.127 2.956 0 4.222-2.571 5.157-5.019 5.432.399.344.743 1.004.743 2.035 0 1.471-.014 2.654-.014 3.025 0 .289.206.632.756.522C19.851 20.979 23 16.854 23 12c0-6.077-4.922-11-11-11Z">
+                            </path>
+                        </svg>
                     </a>
                 </div>
                 <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
                     <a href="https://lazx547.github.io" target="_blank">
-                        <img id="githubpage_ico" src="images/githubpage.png" style="width:40px;height:40px;">
+                        <svg width="40" height="40">
+                            <text x="40" y="15" text-anchor="end" font-family="Calibri" font-size="14"
+                                font-weight="bold" fill="var(--icon-fill-color)">
+                                GitHub<tspan x="40" dy="15">.io</tspan>
+                            </text>
+                        </svg>
                     </a>
                 </div>
                 <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
                     <a href="https://lazxg547b.pages.dev" target="_blank">
-                        <img src="images/cloudflare.png" style="width:40px;height:40px;">
+                        <svg width="40" height="40" viewBox="0 0 1230.574 519.774" xmlns="http://www.w3.org/2000/svg"
+                            preserveAspectRatio="xMidYMid meet">
+                            <path fill="#F78100"
+                                d="M784.025,512.011l5.872-20.311c6.998-24.169,4.394-46.511-7.349-62.926c-10.801-15.122-28.804-24.022-50.666-25.056l-414.114-5.281c-2.788-0.147-5.096-1.403-6.518-3.471c-1.44-2.123-1.773-4.856-0.886-7.478c1.366-4.08,5.41-7.164,9.62-7.349l417.954-5.299c49.576-2.271,103.252-42.505,122.048-91.564l23.837-62.28c0.657-1.696,0.952-3.493,0.94-5.294c-0.007-0.984-0.078-1.969-0.294-2.94C857.383,91.028,748.758,0,618.863,0c-119.685,0-221.312,77.254-257.76,184.623c-23.523-17.652-53.62-27.031-85.969-23.801c-57.423,5.706-103.565,51.94-109.271,109.363c-1.496,14.901-0.277,29.284,3.158,42.8C75.222,315.718,0,392.566,0,487.029c0,8.549,0.646,16.95,1.846,25.166c0.591,3.988,3.952,6.98,7.977,6.98l764.527,0.092c0.076,0,0.142-0.034,0.218-0.036C778.942,519.134,782.79,516.24,784.025,512.011z">
+                            </path>
+                            <path fill="#FBAC42"
+                                d="M921.982,225.558c-3.841,0-7.663,0.111-11.466,0.295c-0.628,0.033-1.224,0.185-1.796,0.385c-1.985,0.696-3.566,2.305-4.168,4.397l-16.286,56.242c-6.998,24.169-4.395,46.493,7.349,62.907c10.801,15.14,28.804,24.022,50.665,25.056l88.277,5.299c2.604,0.129,4.893,1.385,6.297,3.416c1.477,2.142,1.809,4.893,0.923,7.515c-1.385,4.081-5.41,7.164-9.601,7.349l-91.73,5.299c-49.798,2.29-103.473,42.505-122.27,91.564l-6.629,17.319c-1.206,3.134,1.039,6.472,4.354,6.635c0.084,0.004,0.159,0.031,0.244,0.031h315.626c3.766,0,7.127-2.456,8.142-6.075c5.484-19.498,8.402-40.048,8.402-61.301C1148.315,326.889,1046.984,225.558,921.982,225.558z">
+                            </path>
+                        </svg>
                     </a>
                 </div>
                 <div style="float:right;width: 40;height: 40;">
                 </div>
                 <div>
-                    <button style="float:right;width: 40;height: 40;border-radius: 5%;"id="theme-toggle">
-                        <img src="images/light.png" style="width:40px;height:40px;" id="theme-toggle-img">
+                    <button style="float:right;width: 40;height: 40;border-radius: 5%;" id="theme-toggle">
+                        <svg viewBox="0 0 24 24" width="38" height="38" fill="var(--icon-fill-color)">
+                            <path
+                                d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-18a8 8 0 1 1 0 16 8 8 0 0 1 0-16z" />
+                            <path d="M12 18a6 6 0 0 0 0-12v12z" />
+                        </svg>
                     </button>
                 </div>
                 <div style="float:right;width: 40;height: 40;"></div>
@@ -73,7 +90,8 @@
         </div>
         <div style="width: 30%;float: left;height:256;padding: 20px 0;" class="center">
             <div class="center">
-                <h1 style="font-size: 2em;">激情澎湃，筑梦未来<br>
+                <h1 style="font-size: 2em;">
+                    激情澎湃，筑梦未来<br>
                     自信自律，追求卓越<br>
                     肯干善为，相与有成<br>
                     我们是世界547强人才</h1>
@@ -110,11 +128,13 @@
                             style="width:500;height:257">
                     </a>
                 </div>
-                <div style="width:500;height:297" class="subd_a">
-                    <a href="https://www.xmu.edu.cn/" target="_blank" class="center">
-                        <h2>厦门大学</h2>
-                        <img src="https://www.xmu.edu.cn/images/2024shengqi.jpg" style="width:500;height:257">
+                <div style="width:500;height:297;background-color: var(--div-bg-color);" class="subd_a">
+                    <a href="https://www.seu.edu.cn/" target="_blank" class="center">
+                        <h2>东南大学</h2>
+                        <img src="https://www.seu.edu.cn/_upload/article/images/ad/3c/e21e086c423cbb069b2931ebf9b9/7a6b7303-4a08-469a-87aa-e2459ccff4bd.png"
+                            style="width:500;height:257" a="">
                     </a>
+                    <div style="height: 20;background-color: var(--bg-color);"></div>
                 </div>
                 <div style="width:500;height:297" class="subd_a">
                     <a href="https://www.zju.edu.cn/" target="_blank" class="center">
@@ -158,26 +178,33 @@
                         </a>
                         <div class="compact-audio-player" id="compact-audio-player">
                             <button class="compact-control-btn" id="compact-play-pause" title="播放/暂停">
-                              <svg viewBox="0 0 24 24" id="compact-play-icon"><path d="M8 5v14l11-7z"/></svg>
-                              <svg viewBox="0 0 24 24" id="compact-pause-icon" style="display: none;"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/></svg>
+                                <svg viewBox="0 0 24 24" id="compact-play-icon">
+                                    <path d="M8 5v14l11-7z" />
+                                </svg>
+                                <svg viewBox="0 0 24 24" id="compact-pause-icon" style="display: none;">
+                                    <path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z" />
+                                </svg>
                             </button>
                             <div class="compact-progress-container" id="compact-progress-container">
-                              <div class="compact-progress-bar" id="compact-progress-bar"></div>
+                                <div class="compact-progress-bar" id="compact-progress-bar"></div>
                             </div>
                             <div class="compact-time-display">
-                              <span id="compact-current-time">0:00</span> /
-                              <span id="compact-duration">0:00</span>
+                                <span id="compact-current-time">0:00</span> /
+                                <span id="compact-duration">0:00</span>
                             </div>
                             <div class="compact-volume-control" style="display: none;">
-                              <svg viewBox="0 0 24 24" width="18" height="18" fill="var(--text-color)">
-                                <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
-                              </svg>
-                              <input type="range" class="compact-volume-slider" id="compact-volume" min="0" max="1" step="0.01" value="1" title="音量调节">
+                                <svg viewBox="0 0 24 24" width="18" height="18" fill="var(--text-color)">
+                                    <path
+                                        d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z" />
+                                </svg>
+                                <input type="range" class="compact-volume-slider" id="compact-volume" min="0" max="1"
+                                    step="0.01" value="1" title="音量调节">
                             </div>
                             <audio id="compact-audio-element">
-                              <source src="http://music.163.com/song/media/outer/url?id=1889689137.mp3" type="audio/mpeg">
+                                <source src="http://music.163.com/song/media/outer/url?id=1889689137.mp3"
+                                    type="audio/mpeg">
                             </audio>
-                          </div>
+                        </div>
                         <div style="height: 20;"></div>
                     </div>
                     <div style="width: 170;height: 465;float: left;">
@@ -201,26 +228,32 @@
                         </a>
                         <div class="compact-audio-player" id="compact-audio-player">
                             <button class="compact-control-btn" id="compact-play-pause" title="播放/暂停">
-                              <svg viewBox="0 0 24 24" id="compact-play-icon"><path d="M8 5v14l11-7z"/></svg>
-                              <svg viewBox="0 0 24 24" id="compact-pause-icon" style="display: none;"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/></svg>
+                                <svg viewBox="0 0 24 24" id="compact-play-icon">
+                                    <path d="M8 5v14l11-7z" />
+                                </svg>
+                                <svg viewBox="0 0 24 24" id="compact-pause-icon" style="display: none;">
+                                    <path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z" />
+                                </svg>
                             </button>
                             <div class="compact-progress-container" id="compact-progress-container">
-                              <div class="compact-progress-bar" id="compact-progress-bar"></div>
+                                <div class="compact-progress-bar" id="compact-progress-bar"></div>
                             </div>
                             <div class="compact-time-display">
-                              <span id="compact-current-time">0:00</span> /
-                              <span id="compact-duration">0:00</span>
+                                <span id="compact-current-time">0:00</span> /
+                                <span id="compact-duration">0:00</span>
                             </div>
                             <div class="compact-volume-control" style="display: none;">
-                              <svg viewBox="0 0 24 24" width="18" height="18" fill="var(--text-color)">
-                                <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
-                              </svg>
-                              <input type="range" class="compact-volume-slider" id="compact-volume" min="0" max="1" step="0.01" value="1" title="音量调节">
+                                <svg viewBox="0 0 24 24" width="18" height="18" fill="var(--text-color)">
+                                    <path
+                                        d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z" />
+                                </svg>
+                                <input type="range" class="compact-volume-slider" id="compact-volume" min="0" max="1"
+                                    step="0.01" value="1" title="音量调节">
                             </div>
                             <audio id="compact-audio-element">
-                              <source src="http://music.163.com/song/media/outer/url?id=176403.mp3" type="audio/mpeg">
+                                <source src="http://music.163.com/song/media/outer/url?id=176403.mp3" type="audio/mpeg">
                             </audio>
-                          </div>
+                        </div>
                         <div style="height: 20;"></div>
                     </div>
                     <div style="width: 170;height: 465;float: left;">
@@ -284,4 +317,5 @@
     <script src="./script.js"></script>
     <script src="./audio2.js"></script>
 </body>
+
 </html>
