--- a/protect/alls.html
+++ b/protect/alls.html
@@ -11,7 +11,7 @@
 </head>
 
 <body style="min-width: 1200;">
-    <div id="heard" style="background-color:var(--nav-bg-color);height: 102;" class="center">
+    <header id="heard" style="background-color:var(--nav-bg-color);height: 102;width: 100%;margin: 0;" class="center">
         <div style="width: 1200;margin: 0 auto;">
             <div id="header" style="background-color:var(--nav-bg-color);height:60;min-width: 600;max-width: 1200;"
                 class="center">
@@ -78,10 +78,13 @@
                 <li><a class="dis_a" target="_top" href="/about.html" style="padding: 10px 0;width: 60;">关于</a></li>
             </ul>
         </div>
+    </header>
+
+    <div style="flex: 1;">
+        <object id="embedded-content" style="border:0px;display: inline-block;width: 100%;" type="text/x-scriptlet"
+            data="/protect/alls_.html"></object>
+        <br style="height: 20;">
     </div>
-    <object id="embedded-content" style="border:0px;display: inline-block;width: 100%;" type="text/x-scriptlet"
-        data="/protect/alls_.html"></object>
-    <br style="height: 20;">
     <div id="footr" style="background-color:var(--nav-bg-color);height: 48;">
         <div id="footer" style="background-color:var(--nav-bg-color);width:1100" class="center">
             <div style="float: left;width: 20%;background-color:var(--nav-bg-color);">
