--- a/protect/alls_.html
+++ b/protect/alls_.html
@@ -144,7 +144,7 @@
         .staticrypt-content {
             height: 100%;
             margin-bottom: 1em;
-            background: #76B852;
+            background: #ffffff;
             font-family: "Arial", sans-serif;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
