--- a/ZMYH.html
+++ b/ZMYH.html
@@ -12,7 +12,7 @@
 </head>
 
 <body style="min-width: 1200;">
-    <div id="heard" style="background-color:var(--nav-bg-color);height: 102;" class="center">
+    <header id="heard" style="background-color:var(--nav-bg-color);height: 102;width: 100%;margin: 0;" class="center">
         <div style="width: 1200;margin: 0 auto;">
             <div id="header" style="background-color:var(--nav-bg-color);height:60;min-width: 600;max-width: 1200;"
                 class="center">
@@ -79,103 +79,105 @@
                 <li><a class="dis_a" target="_top" href="about.html" style="padding: 10px 0;width: 60;">关于</a></li>
             </ul>
         </div>
-    </div>
-    <br style="height: 20;">
-    <div class="center" style="width: 870;height: 670;background-color: var(--div-bg-color);margin: auto;" id="zmyh">
-        <div style="float: left;border-left: var(--solid-border);clear: both;">
-            <h1 style="position: relative;left: 20;;">载梦远航</h1>
-        </div>
-        <div style="width: 780;height: 50;"><img src=""></div>
-        <div class="center" style="width: 760;height: 620;">
-            <div style="width: 480;height: 620;float: left;">
-                <div style="width: 470;height: 450;">
-                    <div style="width: 470;height: 20;"></div>
-                    <a class="tooltip" href="https://wwqb.lanzout.com/b00occ700h" target="_blank">
-                        <img src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000"
-                            style="width:400;height:400;">
-                        <span class="tooltiptext">点击图片下载无损文件，密码0000</span>
-                    </a>
-                </div>
-                <div class="audio-player">
-                    <div class="progress-container" id="progress-container">
-                        <div class="progress-bar" id="progress-bar"></div>
-                        <div class="progress-handle" id="progress-handle"></div>
+    </header>
+    <div style="flex: 1;">
+        <div style="height: 50;width: 100%;"></div>
+        <div class="center" style="width: 870;height: 670;background-color: var(--div-bg-color);" id="zmyh">
+            <div style="float: left;border-left: var(--solid-border);clear: both;">
+                <h1 style="position: relative;left: 20;;">载梦远航</h1>
+            </div>
+            <div style="width: 780;height: 50;"><img src=""></div>
+            <div class="center" style="width: 760;height: 620;">
+                <div style="width: 480;height: 620;float: left;">
+                    <div style="width: 470;height: 450;">
+                        <div style="width: 470;height: 20;"></div>
+                        <a class="tooltip" href="https://wwqb.lanzout.com/b00occ700h" target="_blank">
+                            <img src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000"
+                                style="width:400;height:400;">
+                            <span class="tooltiptext">点击图片下载无损文件，密码0000</span>
+                        </a>
                     </div>
-
-                    <!-- 时间显示 -->
-                    <div class="time-display">
-                        <span id="current-time">0:00</span>
-                        <span id="duration">0:00</span>
-                    </div>
-
-                    <!-- 控制按钮 -->
-                    <div class="controls">
-                        <div class="playback-controls">
-                            <button class="control-btn" id="rewind" title="后退10秒">
-                                <svg viewBox="0 0 24 24">
-                                    <path
-                                        d="M11.99 5V1l-5 5 5 5V7c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6h-2c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8z" />
-                                </svg>
-                            </button>
-
-                            <button class="control-btn" id="play-pause" title="播放/暂停">
-                                <svg viewBox="0 0 24 24" id="play-icon">
-                                    <path d="M8 5v14l11-7z" />
-                                </svg>
-                                <svg viewBox="0 0 24 24" id="pause-icon" style="display: none;">
-                                    <path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z" />
-                                </svg>
-                            </button>
-
-                            <button class="control-btn" id="fast-forward" title="前进10秒">
-                                <svg viewBox="0 0 24 24">
-                                    <path
-                                        d="M12.01 5V1l5 5-5 5V7c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6h2c0 4.42-3.58 8-8 8s-8-3.58-8-8 3.58-8 8-8z" />
-                                </svg>
-                            </button>
+                    <div class="audio-player">
+                        <div class="progress-container" id="progress-container">
+                            <div class="progress-bar" id="progress-bar"></div>
+                            <div class="progress-handle" id="progress-handle"></div>
                         </div>
 
-                        <div class="volume-control">
-                            <svg viewBox="0 0 24 24" width="24" height="24" fill="var(--text-color)">
-                                <path
-                                    d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z" />
-                            </svg>
-                            <input type="range" class="volume-slider" id="volume" min="0" max="1" step="0.01" value="1"
-                                title="音量调节">
+                        <!-- 时间显示 -->
+                        <div class="time-display">
+                            <span id="current-time">0:00</span>
+                            <span id="duration">0:00</span>
                         </div>
+
+                        <!-- 控制按钮 -->
+                        <div class="controls">
+                            <div class="playback-controls">
+                                <button class="control-btn" id="rewind" title="后退10秒">
+                                    <svg viewBox="0 0 24 24">
+                                        <path
+                                            d="M11.99 5V1l-5 5 5 5V7c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6h-2c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8z" />
+                                    </svg>
+                                </button>
+
+                                <button class="control-btn" id="play-pause" title="播放/暂停">
+                                    <svg viewBox="0 0 24 24" id="play-icon">
+                                        <path d="M8 5v14l11-7z" />
+                                    </svg>
+                                    <svg viewBox="0 0 24 24" id="pause-icon" style="display: none;">
+                                        <path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z" />
+                                    </svg>
+                                </button>
+
+                                <button class="control-btn" id="fast-forward" title="前进10秒">
+                                    <svg viewBox="0 0 24 24">
+                                        <path
+                                            d="M12.01 5V1l5 5-5 5V7c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6h2c0 4.42-3.58 8-8 8s-8-3.58-8-8 3.58-8 8-8z" />
+                                    </svg>
+                                </button>
+                            </div>
+
+                            <div class="volume-control">
+                                <svg viewBox="0 0 24 24" width="24" height="24" fill="var(--text-color)">
+                                    <path
+                                        d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z" />
+                                </svg>
+                                <input type="range" class="volume-slider" id="volume" min="0" max="1" step="0.01"
+                                    value="1" title="音量调节">
+                            </div>
+                        </div>
+
+                        <div class="status-indicator" id="status-indicator" style="display: none;">准备就绪</div>
+
+                        <!-- 隐藏的音频元素 -->
+                        <audio id="audio-element">
+                            <source src="http://music.163.com/song/media/outer/url?id=1889689137.mp3" type="audio/mpeg">
+                            您的浏览器不支持音频元素。
+                        </audio>
                     </div>
 
-                    <div class="status-indicator" id="status-indicator" style="display: none;">准备就绪</div>
-
-                    <!-- 隐藏的音频元素 -->
-                    <audio id="audio-element">
-                        <source src="http://music.163.com/song/media/outer/url?id=1889689137.mp3" type="audio/mpeg">
-                        您的浏览器不支持音频元素。
-                    </audio>
+                    <div class="debug-info" style="display: none;">
+                        <div class="debug-title">调试信息（显示进度条状态）</div>
+                        <div class="debug-content">
+                            <div id="debug-seeking">用户调整: 否</div>
+                            <div id="debug-timeupdate">最后更新: 0ms 前</div>
+                            <div id="debug-position">当前位置: 0%</div>
+                        </div>
+                    </div>
                 </div>
-
-                <div class="debug-info" style="display: none;">
-                    <div class="debug-title">调试信息（显示进度条状态）</div>
-                    <div class="debug-content">
-                        <div id="debug-seeking">用户调整: 否</div>
-                        <div id="debug-timeupdate">最后更新: 0ms 前</div>
-                        <div id="debug-position">当前位置: 0%</div>
+                <div style="width: 280;height: 550;float: left;">
+                    <div style="width: 240;height: 600;" class="border_div">
+                        <div style="width: 230;height: 600;" class="scroll-container">
+                            <h3 style="margin-block-start: 0em;margin-block-end: 0em;">歌词</h3>
+                            <p style="margin-block-start: 0em;margin-block-end: 0em;font-size: 17;">
+                                作曲:陈爱锦<br>编曲：陈若平<br>混音：庄启滔<br>母带工程师：全相彦<br>监制：庄启滔<br>榜山苍苍，右江汤汤<br>圣哲肇启，涵沐未央<br>植柏树梁，惟序惟庠<br>心系桃李，身许国邦<br>士风儒习蒸蒸日上<br>厚德博学荫育吾乡<br>师心一缕载梦远航<br>远航，远航，<br>师心一缕载梦远航<br>学宫煌煌，书院琅琅<br>后昆承续，立誓翱翔<br>以铸以陶，济济一堂<br>吟咏不辍，日就月将<br>砥砺琢磨奋进如桨<br>明理至善我辈自强<br>文脉千年成就梦想<br>梦想，梦想<br>文脉千年成就梦想<br>士风儒习蒸蒸日上<br>厚德博学荫育吾乡<br>师心一缕载梦远航<br>远航，远航，<br>师心一缕载梦远航<br>师心一缕载梦远航
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div style="width: 280;height: 550;float: left;">
-                <div style="width: 240;height: 600;" class="border_div">
-                    <div style="width: 230;height: 600;" class="scroll-container">
-                        <h3 style="margin-block-start: 0em;margin-block-end: 0em;">歌词</h3>
-                        <p style="margin-block-start: 0em;margin-block-end: 0em;font-size: 17;">
-                            作曲:陈爱锦<br>编曲：陈若平<br>混音：庄启滔<br>母带工程师：全相彦<br>监制：庄启滔<br>榜山苍苍，右江汤汤<br>圣哲肇启，涵沐未央<br>植柏树梁，惟序惟庠<br>心系桃李，身许国邦<br>士风儒习蒸蒸日上<br>厚德博学荫育吾乡<br>师心一缕载梦远航<br>远航，远航，<br>师心一缕载梦远航<br>学宫煌煌，书院琅琅<br>后昆承续，立誓翱翔<br>以铸以陶，济济一堂<br>吟咏不辍，日就月将<br>砥砺琢磨奋进如桨<br>明理至善我辈自强<br>文脉千年成就梦想<br>梦想，梦想<br>文脉千年成就梦想<br>士风儒习蒸蒸日上<br>厚德博学荫育吾乡<br>师心一缕载梦远航<br>远航，远航，<br>师心一缕载梦远航<br>师心一缕载梦远航
-                        </p>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
-    <div style="width: auto;height: 20;"></div>
+
     <div id="footr" style="background-color:var(--nav-bg-color);height: 48;">
         <div id="footer" style="background-color:var(--nav-bg-color);width:1100" class="center">
             <div style="float: left;width: 20%;background-color:var(--nav-bg-color);">
