--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 </head>
 
 <body style="min-width: 1200;">
-    <div id="heard" style="background-color:var(--nav-bg-color);height: 102;" class="center">
+    <header id="heard" style="background-color:var(--nav-bg-color);height: 102;width: 100%;margin: 0;" class="center">
         <div style="width: 1200;margin: 0 auto;">
             <div id="header" style="background-color:var(--nav-bg-color);height:60;min-width: 600;max-width: 1200;"
                 class="center">
@@ -86,122 +86,126 @@
                 <li><a class="dis_a" target="_top" href="about.html" style="padding: 10px 0;width: 60;">关于</a></li>
             </ul>
         </div>
-    </div>
-    <br style="height: 20;">
-    <div class="center">
-        <div style="width: 200;background-color: var(--div-bg-color);margin: auto;border-left: var(--solid-border)">
-            <a href="https://github.com/lazx547/lazx547.github.io" target="_blank">
-                <h1>查看源代码</h1>
-            </a>
-        </div>
-        <br style="height: 20;">
-        <div style="max-width: 1000;min-width: 300;margin: auto;background-color: var(--div-bg-color);">
-            <div style="float: left;border-left: var(--solid-border)">
-                <h1 style="position: relative;left: 20;">链接</h1>
+    </header>
+
+    <div style="flex: 1;">
+        <div style="height: 20;width: 100%;"></div>
+
+        <div class="center">
+            <div style="width: 200;background-color: var(--div-bg-color);margin: auto;border-left: var(--solid-border)">
+                <a href="https://github.com/lazx547/lazx547.github.io" target="_blank">
+                    <h1>查看源代码</h1>
+                </a>
             </div>
-            <br style="width: 900;clear: both;">
-            <p>547官网的链接</p>
-            <div class="div_a">
-                <div class="subd_a" style="width: 300;">
-                    <a href="https://lazx547.github.io" target="_blank">
-                        <h2>Github Page</h2>
-                        <svg height="80" width="80" aria-hidden="true" viewBox="0 0 24 24" version="1.1"
-                            data-view-component="true">
-                            <path fill="var(--icon-fill-color)"
-                                d="M12 1C5.923 1 1 5.923 1 12c0 4.867 3.149 8.979 7.521 10.436.55.096.756-.233.756-.522 0-.262-.013-1.128-.013-2.049-2.764.509-3.479-.674-3.699-1.292-.124-.317-.66-1.293-1.127-1.554-.385-.207-.936-.715-.014-.729.866-.014 1.485.797 1.691 1.128.99 1.663 2.571 1.196 3.204.907.096-.715.385-1.196.701-1.471-2.448-.275-5.005-1.224-5.005-5.432 0-1.196.426-2.186 1.128-2.956-.111-.275-.496-1.402.11-2.915 0 0 .921-.288 3.024 1.128a10.193 10.193 0 0 1 2.75-.371c.936 0 1.871.123 2.75.371 2.104-1.43 3.025-1.128 3.025-1.128.605 1.513.221 2.64.111 2.915.701.77 1.127 1.747 1.127 2.956 0 4.222-2.571 5.157-5.019 5.432.399.344.743 1.004.743 2.035 0 1.471-.014 2.654-.014 3.025 0 .289.206.632.756.522C19.851 20.979 23 16.854 23 12c0-6.077-4.922-11-11-11Z">
-                            </path>
-                        </svg>
-                        <br>
-                        <p><u>lazx547.github.io</u></p>
-                    </a>
+            <br style="height: 20;">
+            <div style="max-width: 1000;min-width: 300;margin: auto;background-color: var(--div-bg-color);">
+                <div style="float: left;border-left: var(--solid-border)">
+                    <h1 style="position: relative;left: 20;">链接</h1>
                 </div>
-                <div class="subd_a" style="width: 300;">
-                    <a href="https://lazxg547b.pages.dev/" target="_blank">
-                        <h2>Cloudflare Page</h2>
-                        <svg width="80" height="80" viewBox="0 0 1230.574 519.774" xmlns="http://www.w3.org/2000/svg"
-                            preserveAspectRatio="xMidYMid meet">
-                            <path fill="#F78100"
-                                d="M784.025,512.011l5.872-20.311c6.998-24.169,4.394-46.511-7.349-62.926c-10.801-15.122-28.804-24.022-50.666-25.056l-414.114-5.281c-2.788-0.147-5.096-1.403-6.518-3.471c-1.44-2.123-1.773-4.856-0.886-7.478c1.366-4.08,5.41-7.164,9.62-7.349l417.954-5.299c49.576-2.271,103.252-42.505,122.048-91.564l23.837-62.28c0.657-1.696,0.952-3.493,0.94-5.294c-0.007-0.984-0.078-1.969-0.294-2.94C857.383,91.028,748.758,0,618.863,0c-119.685,0-221.312,77.254-257.76,184.623c-23.523-17.652-53.62-27.031-85.969-23.801c-57.423,5.706-103.565,51.94-109.271,109.363c-1.496,14.901-0.277,29.284,3.158,42.8C75.222,315.718,0,392.566,0,487.029c0,8.549,0.646,16.95,1.846,25.166c0.591,3.988,3.952,6.98,7.977,6.98l764.527,0.092c0.076,0,0.142-0.034,0.218-0.036C778.942,519.134,782.79,516.24,784.025,512.011z">
-                            </path>
-                            <path fill="#FBAC42"
-                                d="M921.982,225.558c-3.841,0-7.663,0.111-11.466,0.295c-0.628,0.033-1.224,0.185-1.796,0.385c-1.985,0.696-3.566,2.305-4.168,4.397l-16.286,56.242c-6.998,24.169-4.395,46.493,7.349,62.907c10.801,15.14,28.804,24.022,50.665,25.056l88.277,5.299c2.604,0.129,4.893,1.385,6.297,3.416c1.477,2.142,1.809,4.893,0.923,7.515c-1.385,4.081-5.41,7.164-9.601,7.349l-91.73,5.299c-49.798,2.29-103.473,42.505-122.27,91.564l-6.629,17.319c-1.206,3.134,1.039,6.472,4.354,6.635c0.084,0.004,0.159,0.031,0.244,0.031h315.626c3.766,0,7.127-2.456,8.142-6.075c5.484-19.498,8.402-40.048,8.402-61.301C1148.315,326.889,1046.984,225.558,921.982,225.558z">
-                            </path>
-                        </svg>
-                        <br>
-                        <p><u>lazxg547b.pages.dev</u></p>
-                    </a>
+                <br style="width: 900;clear: both;">
+                <p>547官网的链接</p>
+                <div class="div_a">
+                    <div class="subd_a" style="width: 300;">
+                        <a href="https://lazx547.github.io" target="_blank">
+                            <h2>Github Page</h2>
+                            <svg height="80" width="80" aria-hidden="true" viewBox="0 0 24 24" version="1.1"
+                                data-view-component="true">
+                                <path fill="var(--icon-fill-color)"
+                                    d="M12 1C5.923 1 1 5.923 1 12c0 4.867 3.149 8.979 7.521 10.436.55.096.756-.233.756-.522 0-.262-.013-1.128-.013-2.049-2.764.509-3.479-.674-3.699-1.292-.124-.317-.66-1.293-1.127-1.554-.385-.207-.936-.715-.014-.729.866-.014 1.485.797 1.691 1.128.99 1.663 2.571 1.196 3.204.907.096-.715.385-1.196.701-1.471-2.448-.275-5.005-1.224-5.005-5.432 0-1.196.426-2.186 1.128-2.956-.111-.275-.496-1.402.11-2.915 0 0 .921-.288 3.024 1.128a10.193 10.193 0 0 1 2.75-.371c.936 0 1.871.123 2.75.371 2.104-1.43 3.025-1.128 3.025-1.128.605 1.513.221 2.64.111 2.915.701.77 1.127 1.747 1.127 2.956 0 4.222-2.571 5.157-5.019 5.432.399.344.743 1.004.743 2.035 0 1.471-.014 2.654-.014 3.025 0 .289.206.632.756.522C19.851 20.979 23 16.854 23 12c0-6.077-4.922-11-11-11Z">
+                                </path>
+                            </svg>
+                            <br>
+                            <p><u>lazx547.github.io</u></p>
+                        </a>
+                    </div>
+                    <div class="subd_a" style="width: 300;">
+                        <a href="https://lazxg547b.pages.dev/" target="_blank">
+                            <h2>Cloudflare Page</h2>
+                            <svg width="80" height="80" viewBox="0 0 1230.574 519.774"
+                                xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
+                                <path fill="#F78100"
+                                    d="M784.025,512.011l5.872-20.311c6.998-24.169,4.394-46.511-7.349-62.926c-10.801-15.122-28.804-24.022-50.666-25.056l-414.114-5.281c-2.788-0.147-5.096-1.403-6.518-3.471c-1.44-2.123-1.773-4.856-0.886-7.478c1.366-4.08,5.41-7.164,9.62-7.349l417.954-5.299c49.576-2.271,103.252-42.505,122.048-91.564l23.837-62.28c0.657-1.696,0.952-3.493,0.94-5.294c-0.007-0.984-0.078-1.969-0.294-2.94C857.383,91.028,748.758,0,618.863,0c-119.685,0-221.312,77.254-257.76,184.623c-23.523-17.652-53.62-27.031-85.969-23.801c-57.423,5.706-103.565,51.94-109.271,109.363c-1.496,14.901-0.277,29.284,3.158,42.8C75.222,315.718,0,392.566,0,487.029c0,8.549,0.646,16.95,1.846,25.166c0.591,3.988,3.952,6.98,7.977,6.98l764.527,0.092c0.076,0,0.142-0.034,0.218-0.036C778.942,519.134,782.79,516.24,784.025,512.011z">
+                                </path>
+                                <path fill="#FBAC42"
+                                    d="M921.982,225.558c-3.841,0-7.663,0.111-11.466,0.295c-0.628,0.033-1.224,0.185-1.796,0.385c-1.985,0.696-3.566,2.305-4.168,4.397l-16.286,56.242c-6.998,24.169-4.395,46.493,7.349,62.907c10.801,15.14,28.804,24.022,50.665,25.056l88.277,5.299c2.604,0.129,4.893,1.385,6.297,3.416c1.477,2.142,1.809,4.893,0.923,7.515c-1.385,4.081-5.41,7.164-9.601,7.349l-91.73,5.299c-49.798,2.29-103.473,42.505-122.27,91.564l-6.629,17.319c-1.206,3.134,1.039,6.472,4.354,6.635c0.084,0.004,0.159,0.031,0.244,0.031h315.626c3.766,0,7.127-2.456,8.142-6.075c5.484-19.498,8.402-40.048,8.402-61.301C1148.315,326.889,1046.984,225.558,921.982,225.558z">
+                                </path>
+                            </svg>
+                            <br>
+                            <p><u>lazxg547b.pages.dev</u></p>
+                        </a>
+                    </div>
+                </div>
+                <br style="height: 10;">
+            </div>
+            <br style="height: 20;">
+            <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: var(--div-bg-color);">
+                <div style="float: left;border-left: var(--solid-border)">
+                    <h1 style="position: relative;left: 20;">程序</h1>
+                </div>
+                <br style="clear: both;">
+                <div class="div_a">
+                    <div class="subd_a" style="width: 300;">
+                        <h2>547DesktopTool</h2>
+                        <img src="images/547dt.png" style="width:80px;height:80px;">
+                        <p>547桌面工具</p>
+                        <p>
+                            <a href="https://github.com/lazx547/547DesktopTool" target="_blank">查看源代码 </a>或
+                            <a href="https://github.com/lazx547/547DesktopTool/releases" target="_blank">下载</a>
+                        </p>
+                    </div>
+                </div>
+                <br style="height: 10;">
+            </div>
+            <br style="height: 20;">
+            <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: var(--div-bg-color);">
+                <div style="float: left;border-left: var(--solid-border)">
+                    <h1 style="position: relative;left: 20;">受保护的网页</h1>
+                </div>
+                <br style="clear: both;">
+                <a href="protect/student.html">
+                    <h2>547班学生名单</h2>
+                </a>
+                <a href="protect/alls.html">
+                    <h2>24级学生名单</h2>
+                </a>
+            </div>
+            <br style="height: 20;">
+            <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: var(--div-bg-color);">
+                <div style="float: left;border-left: var(--solid-border)">
+                    <h1 style="position: relative;left: 20;">链接</h1>
+                </div>
+                <br style="clear: both;">
+                <div class="center">
+                    <a href="https://sf-lcx.pages.dev" class="aa" target="_blank">刘慈欣小说集</a>
+                    <a href="https://afraidskydream.github.io/" class="aa" target="_blank">尸田</a>
+                    <a href="https://space.bilibili.com/1150293211" class="aa" target="_blank">Bilibili:winMCHG31400</a>
+                    <a href="http://winmchg31400.github.io/tools" class="aa" target="_blank">winMCHG31400</a>
+                    <a href="https://www.cdqz.net/" class="aa" target="_blank">成都七中官网</a>
+                    <a href="https://www.cdqz.net/html/cdqz/html/list.html?menuId=c1b22f946fd447eebd6c3c4b37ba99e5"
+                        class="aa" target="_blank">成都七中教育集团</a>
+                    <a href="http://www.eastedu.org/" class="aa" target="_blank">东方闻道网校</a>
+                    <a href="https://www.eastedu.com/" class="aa" target="_blank">东方闻道</a>
+                    <a href="https://appqh86kyei8740.pc.xiaoe-tech.com/" class="aa" target="_blank">郡园学堂</a>
+                    <a href="https://www.runoob.com/" class="aa" target="_blank">菜鸟教程</a>
+                    <a href="https://www.w3school.com.cn/index.html" class="aa" target="_blank">W3school</a>
+                    <a href="https://robinmoisson.github.io/staticrypt/" class="aa" target="_blank">staticrypt</a>
+                    <a href="https://11.csy2022.top/" class="aa" target="_blank">11.csy2022.top</a>
+                    <a href="https://mindustrygame.github.io/" class="aa" target="_blank">Mindustry</a>
                 </div>
             </div>
-            <br style="height: 10;">
-        </div>
-        <br style="height: 20;">
-        <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: var(--div-bg-color);">
-            <div style="float: left;border-left: var(--solid-border)">
-                <h1 style="position: relative;left: 20;">程序</h1>
-            </div>
-            <br style="clear: both;">
-            <div class="div_a">
-                <div class="subd_a" style="width: 300;">
-                    <h2>547DesktopTool</h2>
-                    <img src="images/547dt.png" style="width:80px;height:80px;">
-                    <p>547桌面工具</p>
-                    <p>
-                        <a href="https://github.com/lazx547/547DesktopTool" target="_blank">查看源代码 </a>或
-                        <a href="https://github.com/lazx547/547DesktopTool/releases" target="_blank">下载</a>
-                    </p>
+            <br style="height: 20;">
+            <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: var(--div-bg-color);">
+                <div style="float: left;border-left: var(--solid-border)">
+                    <h1 style="position: relative;left: 20;">联系方式</h1>
                 </div>
+                <br style="clear: both;">
+                <p style="display: none;">QQ：2946983031</p>
+                <p>邮箱：<a href="mailto:lazxg547b@outlook.com">lazxg547b@outlook.com</a><br><a
+                        href="mailto:2946983031@qq.com">2946983031@qq.com</a></p>
+                <p>Github：<a href="https://github.com/lazx547" target="_blank">lazx547</a></p>
             </div>
-            <br style="height: 10;">
+            <br style="height: 20;">
         </div>
-        <br style="height: 20;">
-        <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: var(--div-bg-color);">
-            <div style="float: left;border-left: var(--solid-border)">
-                <h1 style="position: relative;left: 20;">受保护的网页</h1>
-            </div>
-            <br style="clear: both;">
-            <a href="protect/student.html">
-                <h2>547班学生名单</h2>
-            </a>
-            <a href="protect/alls.html">
-                <h2>24级学生名单</h2>
-            </a>
-        </div>
-        <br style="height: 20;">
-        <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: var(--div-bg-color);">
-            <div style="float: left;border-left: var(--solid-border)">
-                <h1 style="position: relative;left: 20;">链接</h1>
-            </div>
-            <br style="clear: both;">
-            <div class="center">
-                <a href="https://sf-lcx.pages.dev" class="aa" target="_blank">刘慈欣小说集</a>
-                <a href="https://afraidskydream.github.io/" class="aa" target="_blank">尸田</a>
-                <a href="https://space.bilibili.com/1150293211" class="aa" target="_blank">Bilibili:winMCHG31400</a>
-                <a href="http://winmchg31400.github.io/tools" class="aa" target="_blank">winMCHG31400</a>
-                <a href="https://www.cdqz.net/" class="aa" target="_blank">成都七中官网</a>
-                <a href="https://www.cdqz.net/html/cdqz/html/list.html?menuId=c1b22f946fd447eebd6c3c4b37ba99e5"
-                    class="aa" target="_blank">成都七中教育集团</a>
-                <a href="http://www.eastedu.org/" class="aa" target="_blank">东方闻道网校</a>
-                <a href="https://www.eastedu.com/" class="aa" target="_blank">东方闻道</a>
-                <a href="https://appqh86kyei8740.pc.xiaoe-tech.com/" class="aa" target="_blank">郡园学堂</a>
-                <a href="https://www.runoob.com/" class="aa" target="_blank">菜鸟教程</a>
-                <a href="https://www.w3school.com.cn/index.html" class="aa" target="_blank">W3school</a>
-                <a href="https://robinmoisson.github.io/staticrypt/" class="aa" target="_blank">staticrypt</a>
-                <a href="https://11.csy2022.top/" class="aa" target="_blank">11.csy2022.top</a>
-                <a href="https://mindustrygame.github.io/" class="aa" target="_blank">Mindustry</a>
-            </div>
-        </div>
-        <br style="height: 20;">
-        <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: var(--div-bg-color);">
-            <div style="float: left;border-left: var(--solid-border)">
-                <h1 style="position: relative;left: 20;">联系方式</h1>
-            </div>
-            <br style="clear: both;">
-            <p style="display: none;">QQ：2946983031</p>
-            <p>邮箱：<a href="mailto:lazxg547b@outlook.com">lazxg547b@outlook.com</a><br><a
-                    href="mailto:2946983031@qq.com">2946983031@qq.com</a></p>
-            <p>Github：<a href="https://github.com/lazx547" target="_blank">lazx547</a></p>
-        </div>
-        <br style="height: 20;">
     </div>
     <div id="footr" style="background-color:var(--nav-bg-color);height: 48;">
         <div id="footer" style="background-color:var(--nav-bg-color);width:1100" class="center">
