--- a/history/index.html
+++ b/history/index.html
@@ -101,6 +101,17 @@
                 <br>
                 <div class="div_a">
                     <div id="param-show" style="background-color:var(--nav-bg-color);width: 50;" class="subd_a">
+                        <p style="font-size: 20;" id="p-text">-1</p>
+                    </div><div id="param-show" class="subd_a">
+                        <p style="font-size: 20;">到</p>
+                    </div>
+                    <div id="param-show" style="background-color:var(--nav-bg-color);width: 50;" class="subd_a">
+                        <p style="font-size: 20;">-11</p>
+                    </div>
+                    <div id="param-show" class="subd_a">
+                        <p style="font-size: 20;">和</p>
+                    </div>
+                    <div id="param-show" style="background-color:var(--nav-bg-color);width: 50;" class="subd_a">
                         <p style="font-size: 20;" id="p-text">1</p>
                     </div><div id="param-show" class="subd_a">
                         <p style="font-size: 20;">到</p>
