--- a/ZMYH.html
+++ b/ZMYH.html
@@ -166,13 +166,20 @@
                 </div>
                 <div style="width: 320;height: 550;float: left;">
                     <div style="width: 320;height: 600;" class="border_div">
-                        <div style="width: 310;height: 600;overflow-y: auto" class="scroll-container"id="lrc-div" >
+                        <div style="width: 310;height: 600;overflow-y: auto" class="scroll-container" id="lrc-div">
                             <h3>歌词</h3>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div style="height: 50;width: 100%;"></div>
+        <div class="center" style="width: 910;height: 45;background-color: var(--div-bg-color);" id="zmyh_note">
+            <div style="float: left;border-left: var(--solid-border);clear: both;">
+                <h1 style="position: relative;left: 20;"><a href="/ZMYH_note.html">查看歌谱</a></h1>
+            </div>
+        </div>
+        <div style="height: 50;width: 100%;"></div>
     </div>
 
     <div id="footr" style="background-color:var(--nav-bg-color);height: 48;">
