--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" async href="./style.css">
     <style>
         .aa {
+            display: inline-block;
             border: 1px solid #6b6b6b;
         }
 
@@ -191,6 +192,61 @@
                     <a href="https://robinmoisson.github.io/staticrypt/" class="aa" target="_blank">staticrypt</a>
                     <a href="https://11.csy2022.top/" class="aa" target="_blank">11.csy2022.top</a>
                     <a href="https://mindustrygame.github.io/" class="aa" target="_blank">Mindustry</a>
+                    <a href="" class="aa" target="_blank"></a>
+                    <a href="https://musescore.org/" class="aa" target="_blank">MuseScore</a>
+                    <a href="https://www.vexflow.com/" class="aa" target="_blank">VexFlow</a>
+                    <a href="https://github.com/mudcube/MIDI.js" class="aa" target="_blank">MIDI.js</a>
+                </div>
+            </div>
+            <br style="height: 20;">
+            <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: var(--div-bg-color);">
+                <div style="float: left;border-left: var(--solid-border)">
+                    <h1 style="position: relative;left: 20;">使用的开源项目</h1>
+                </div>
+                <br style="clear: both;">
+                <div class="div_a">
+                    <div class="subd_a" style="width: 200;">
+                        <a href="https://robinmoisson.github.io/staticrypt/" target="_blank">
+                            <h2>staticrypt</h2>
+                            <svg  width="80"  height="80" viewBox="0 0 21.166666 21.166666"  version="1.1"  id="svg1"  xmlns="http://www.w3.org/2000/svg"  xmlns:svg="http://www.w3.org/2000/svg">
+                                <defs id="defs1" />
+                                <g id="layer1">
+                                    <rect style="fill:none;stroke:var(--text-color);stroke-width:0.770865;stroke-linejoin:round;stroke-miterlimit:4.1;stroke-dasharray:none;stroke-opacity:1" id="rect1" width="20.395802" height="20.395802" x="0.38543248" y="0.38543248" />
+                                  <text xml:space="preserve" style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:4.23333px;line-height:0.8;font-family:'Segoe Script';-inkscape-font-specification:'Segoe Script';text-align:start;writing-mode:lr-tb;direction:ltr;text-anchor:start;white-space:pre;inline-size:14.646;fill:var(--text-color);fill-opacity:1;stroke:var(--text-color);stroke-width:2e-08;stroke-linejoin:round;stroke-miterlimit:4.1;stroke-dasharray:none;stroke-opacity:1" x="7.5137444" y="12.601792" id="text1" transform="matrix(1.2594303,0,0,1.2942376,-6.910832,-3.8376463)"><tspan x="7.5137444"  y="12.601792" id="tspan2">无图标</tspan></text>
+                                </g>
+                              </svg>                              
+                            <p>静态网页加密</p>
+                            <br>
+                        </a>
+                    </div>
+                    <div class="subd_a" style="width: 200;">
+                        <a href="https://github.com/musescore/MuseScore" target="_blank">
+                            <h2>MuseScore</h2>
+                            <svg width="80" height="80" viewBox="0 0 400 400" fill="none" version="1.1" id="svg5" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+                                <defs id="defs5" />
+                                <circle style="fill:#000076;fill-opacity:1;stroke:#000000;stroke-width:0;stroke-linejoin:round;stroke-miterlimit:4.1;stroke-opacity:0" id="path6" cx="200.00002" cy="200" r="179.18161" />
+                                <path d="m 124.118,177.913 c -2.363,-7.46799 -3.634,-15.39099 -3.634,-23.59699 C 120.484,109.406 158.543,73 205.492,73 c 27.106,0 51.249,12.136 66.815,31.03701 v 0 c 4.476,4.91399 7.208,11.46499 7.208,18.65799 0,15.24801 -12.276,27.60901 -27.419,27.60901 -15.143,0 -27.419,-12.361 -27.419,-27.60901 0,-15.248 12.276,-27.609 27.419,-27.609 0.209,0 0.418,0.003 0.626,0.007 -9.055,-6.933 -20.354,-11.049 -32.608,-11.049 -29.778,0 -53.918,24.307 -53.918,54.291 0,15.606 6.54,29.674 17.01,39.578 z" fill="#19f3ff" id="path3" />
+                                <path d="m 285,238.55901 c 0,-5.62901 -0.55,-11.135 -1.601,-16.47201 h -67.051 c 8.595,9.962 13.814,23.076 13.814,37.444 0,31.163 -24.552,56.425 -54.838,56.425 -12.207,0 -23.483,-4.10399 -32.595,-11.04399 15.001,-0.167 27.109,-12.46301 27.109,-27.60701 0,-15.248 -12.276,-27.60899 -27.419,-27.60899 -15.143,0 -27.419,12.36099 -27.419,27.60899 0,7.048 2.623,13.479 6.939,18.358 C 138.899,314.831 164.235,327 192.543,327 243.606,327 285,287.404 285,238.55901 Z" fill="#19f3ff" id="path4" />
+                                <path d="M 254.837,177.91201 H 194.515 L 145.16,222.086 h 60.323 z" fill="#19f3ff" id="path5" />
+                              </svg>
+                            <p>五线谱编辑器</p>
+                            <br>
+                        </a>
+                    </div>
+                    <!--<div class="subd_a" style="width: 200;">
+                        <a href="https://github.com/0xfe/vexflow" target="_blank">
+                            <h2>VexFlow</h2>
+                            <p>在html上显示五线谱</p>
+                            <br>
+                        </a>
+                    </div>
+                    <div class="subd_a" style="width: 200;">
+                        <a href="https://github.com/mudcube/MIDI.js" target="_blank">
+                            <h2>MIDI.js</h2>
+                            <p>在html中播放midi</p>
+                            <br>
+                        </a>
+                    </div>-->
                 </div>
             </div>
             <br style="height: 20;">
